<resources>
    <string name="app_name">RecyclerViewInTabLayout</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="date_text">Pick a Date</string>
    <string name="name">Name</string>
    <string name="add_symptom">Add Symptom</string>
    <string name="remove_symptom">Remove Symptom</string>
    <string name="add_blood_sugar_entry">Add Blood Sugar Entry</string>
    <string name="remove_blood_sugar_entry">Remove Blood Sugar Entry</string>
    <string name="temp_placeholder_button">Button</string>
    <string name="temp_placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="track_symptom">Track a Symptom</string>
    <string name="track_blood_sugar">Track Blood Sugar</string>
    <string name="headache">Headache</string>
    <string name="level">Level</string>
    <string name="time">Time</string>
    <string name="symptom_name">Symptom Name</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="safe">Safe</string>
    <string name="unsafe">Unsafe</string>
    <string name="isMoreThanTwoHours">Was this measurement taken more than two hours after your last meal?</string>
    <string name="track">Track</string>
    <string name="record_excercise">Record Exercise</string>
    <string name="confirmEdit">Confirm Edit</string>
    <string name="duration_minutes">%s minutes</string>
    <string name="calories">%s calories</string>
    <string-array name="Location">
        <item>back of head/neck</item>
        <item>top of head</item>
        <item>forehead</item>
        <item>behind both eyes</item>
        <item>behind one eye</item>
        <item>temples</item>
        <item>behind the ear</item>
        <item>on one side of the head</item>
        <item>not sure/everywhere</item>
    </string-array>
    <string-array name="Type">
        <item>sharp</item>
        <item>dull</item>
        <item>pulsing</item>
    </string-array>
    <string-array name="typeOfWorkout">
        <item>cardio</item>
        <item>flexibility</item>
        <item>resistance</item>
    </string-array>
    <string-array name="warmUp">
        <item>static</item>
        <item>dynamic</item>
        <item>passive</item>
        <item>active</item>
    </string-array>


    <string name="save_Symptom">Save Symptom</string>
    <string name="record_medication">Record Medication</string>
    <string name="record_exercise">Record Exercise</string>
    <string name="set_a_reminder">Set a reminder</string>
    <string name="feelings_of_unusual_thirst">Feelings of unusual thirst</string>
    <string name="feelings_of_exhaustion_and_weakness">Feelings of exhaustion and weakness</string>
    <string name="a_headache">A headache</string>
    <string name="blurred_vision">Blurred vision</string>
    <string name="trouble_breathing">Trouble breathing</string>
    <string name="nausea_vomiting">Nausea/vomiting</string>
    <string name="date">Date</string>

</resources>
