<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSymptomActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextBloodSugarTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/time" />

    <EditText
        android:id="@+id/editTextBloodSugarLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/level" />

    <EditText
        android:id="@+id/editTextBloodSugarNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/notes" />

    <Button
        android:id="@+id/buttonAddBloodSugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_blood_sugar_entry" />

    <Button
        android:id="@+id/buttonRemoveBloodSugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_blood_sugar_entry" />

    <Switch
        android:id="@+id/switchBloodSugarIsMoreThanTwoHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isMoreThanTwoHours" />
</LinearLayout>