<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorGrey">

    <Button
        style="@style/genericButton"
        android:id="@+id/buttonTrackASymptom"
        android:text="@string/track_symptom"
        android:background="@color/colorWhite"
        />

    <Button
        android:id="@+id/buttonTrackBloodSugar"
        android:text="@string/track_blood_sugar"
        style="@style/genericButton"
        />


    <Button
        android:id="@+id/buttonRecordExercise"
        android:text="@string/record_exercise"
        style="@style/genericButton"/>
    <Button
        android:id="@+id/buttonSetAReminder"
        android:text="@string/set_a_reminder"
        style="@style/genericButton"/>

    <View android:id="@+id/rectangle_at_the_top"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorGrey"
        android:visibility="visible"/>

    </LinearLayout>

</ScrollView>