<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSymptomActivity"
    android:orientation="vertical"
    android:padding="16dp">



    <EditText
        android:id="@+id/editTextSymptomLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/location" />

    <TextView
        android:id="@+id/textViewSymptomLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/10"
        android:textSize="30sp"/>
    <SeekBar
        android:id="@+id/seekBarSymptomLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextSymptomTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/time" />

    <Button
        android:id="@+id/buttonAddSymptom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_symptom" />

    <Button
        android:id="@+id/buttonRemoveSymptom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_symptom" />
</LinearLayout>